feat: display extension in the document sidebar
Refs: #42